--- a/Index.html
+++ b/Index.html
@@ -66,7 +66,7 @@
       <h2 class="font-header"> FIND YOUR ROUTE</h2><br>
         <p> Choose your origin and destination</p><br>
         <p> Select your optimal date for travel</p><br>
-        <p> HIT THE FLY AWAY BUTTON </p> 
+        <p> Submit </p> 
     </div>
   </div>
 
@@ -75,10 +75,10 @@
      <img src="worldsearch.png" alt="worldsearch">
       <h2 class="font-header">SEARCH</h2><br>
           
-        <p> shortest flight path</p>
-        <p> graphical data</p>
-        <p> on-time performance</p>
-        <p> determine which fpght is best for you</p>
+        <p> Shortest flight path</p>
+        <p> Graphical data</p>
+        <p> On-time performance</p>
+        <p> Determine which flight is best for you</p>
           
     </div>
   </div>
