--- a/AboutUs.html
+++ b/AboutUs.html
@@ -47,19 +47,19 @@
     <div class="airplane-box-1">
         <div class="card">
             <h1>FlightCast Team</h1>
-            <h4>Trevor Bowens</h4>
-            <h4>Angel Cahill</h4>
-            <h4>Dimpal Gajjar</h4>
-            <h4>T.J. Zientek</h4>
+            <h4><b>Trevor Bowens<br>
+                  Angel Cahill<br>
+                  Dimpal Gajjar<br>
+                  T.J. Zientek</h4></b>
   <br><br>
             <h1>Technologies Used</h1>
-                 Python<br>
+                <b> Python<br>
                  Html<br>
                  CSS3<br>
                  D3<br>
                  leaflet<br>
                 Mapbox<br>
-                Flask<br>
+                Flask</b><br>
   
         </div>
         
